# hide-sdk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
examples/: for_screenshot.py  langchain.py  quickstart.py
hide/: __init__.py  model.py
hide/client/: __init__.py  hide_client.py  model.py
hide/devcontainer/: __init__.py  model.py
hide/langchain/: example.py  toolkit.py
hide/toolkit/: __init__.py  toolkit.py
tests/: test_devcontainer_model.py  test_file.py  test_hide_client.py  test_toolkit.py
