[tool.poetry]
name = "hide-py"
version = "0.4.1"
description = "Hide: Headless IDE for coding agents"
license = "MIT"
authors = ["Art Moskvin <amoskvin@me.com>"]
readme = "README.md"
homepage = "https://hide.sh"
repository = "https://github.com/artmoskvin/hide-python"
documentation = "https://hide.sh"
packages = [{include = "hide"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.16"
langchain-openai = "^0.1.3"
langchainhub = "^0.1.15"
requests = "^2.31.0"
pydantic = "^2.7.3"
pyjson5 = "^1.6.6"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
